[package]
name = "coinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.144", features=["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.13.1"
clap = { version = "3.2.17", features = ["derive"] }
prettytable-rs = "^0.9"
comfy-table = "6.0.0"
